# Langchain-AiMasterclass

./: .gitignore  main.py  pyproject.toml
1.BasicLLMCall/: 1.openai_llm_call.py  2.groq_llm_call.py  3.gemini_llm_call.py  llm_with_init_chat_model.py
2.Prompts/: 1_static_prompt.py  2_dynamic_prompt.py  3_chat_prompt_template.py  project.py  test.py
3.StructuredResponses/: 1_without_structure.py  2_typeddict.py  3_annoted_typeddict.py  4_pydantic_response.py
4.OutputParsers/: 1_str_output_parsers.py  2_json_output_parser.py  3_pydantic_output_parser.py
5.Chains/: 1_simple_chain.py  2_sequential_chain.py  3_conditional_chain.py  4_parallel_chain.py
6.DocumentLoaders/: 1_text_loader.py  2_pdf_loader.py  3_directory_loader.py  4_webbase_loader.py  5_csv_loader.py  sales_data.csv  tesla.txt
7.TextSplitters/: 1_character_text_splitter.py  2_recursive_text_splitters.py
8.Embeddings/: 1_openai_embeddings.py
9.VectorStore/: 1_chroma_db.py
